--- a/README
+++ b/README
@@ -4,6 +4,10 @@ A TextMate Colour Scheme
 
 See http://wiki.macromates.com/Themes/UserSubmittedThemes how to install a new colour scheme on your Mac.
 
+# Where do these colours come from and why this theme name?
+
+I live close the the sea and I love it. The colours in the thema come from photos I shot at the sea side.
+
 
 License: 
 
